# CrabLambda

./: .env  Cargo.toml  README.md  build.rs
database/: crab_lamda.duckdb
src/: main.rs
src/container/: mod.rs
src/container/dockerizer/: mod.rs
src/container/node/: deployer.rs  mod.rs  wrapper.rs
src/db/: mod.rs
src/db/file_db/: create_file_functions.rs  insert_file_functions.rs  mod.rs  read_file_functions.rs  update_file_functions.rs
src/db/memory_db/: mod.rs
src/db/redis/: mod.rs
src/server/middleware/: mod.rs
src/server/routes/: mod.rs
src/utils/: mod.rs  operating_system.rs  uuid_generator.rs
